- second revision of tensors: fill tests, prepare for arithmetic operations - various code improvements